--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exp_package_test_v1",
-  "version": "1.0.3",
+  "version": "1.0.4-alpha.0",
   "description": "A simple package ready for npm",
   "main": "index.js",
   "files": [
